minithor/infrastructure/thorium/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thorium-default-ingress
  namespace: thorium
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: thorium-api
                port:
                  number: 80
